# rain

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md
ci/: ci_main.py
ci/cpplint/: cpplint.py
ci/docgen/: .gitignore  README.md  conf.py  docgen.py  docgen_builder.py  docgen_examples.py  index.rst
ci/lint/: cpplint.py  lint_utils.py  pylint.py  requirements.txt
ci/pylint/: pylint.py
ci/pyutils/: README.md  builder.py  doxyfile_utils.py  lint_utils.py  path_utils.py  setup_python_venv.py  shell_utils.py
ci/test/: test.py
cmake/: config.cmake  path.cmake
examples/: hello_world.rain
include/rain/: factory.h  i_interpreter.h  i_robject.h  i_string_convertible.h  i_string_logo.h  i_version.h  interpreter_factory.h  logo_factory.h  rain.h  rain_api.h  rain_macros.h  string_logo.h  string_logo_factory.h  version.h  version_factory.h
script/rain/: README.md  builder.py  lint_utils.py  setup_python_venv.py  shell_utils.py
src/: CMakeLists.txt
src/entry/: CMakeLists.txt  entry.cpp
src/rain/: .gitignore  CMakeLists.txt  current_version.cpp  current_version.h  gen-version.cmake  interpreter_factory.cpp  string_logo.cpp  string_logo_factory.cpp  version.cpp  version_factory.cpp
src/rain/core/: CMakeLists.txt  console.h  interpreter.cpp  interpreter.h
src/rain/logger/: CMakeLists.txt  logger.cpp  logger.h
src/rain/misc/: CMakeLists.txt  string_utils.cpp  string_utils.h
srcs/: CMakeLists.txt
srcs/entry/: entry.cpp  main.cpp
srcs/rain/: .gitignore  CMakeLists.txt  api_macro.h  current_version.cpp  current_version.h  factory.cpp  factory.h  interpreter_factory.cpp  logo_factory.cpp  rain.h  rain.package.cmake.in  string_logo.cpp  string_logo.h  string_logo_factory.cpp  version.cpp  version.def.h.in  version.h  version_factory.cpp
srcs/rain/core/: CMakeLists.txt  console.cpp  console.h  interpreter.cpp  interpreter.h  macros.h
srcs/rain/logger/: CMakeLists.txt  logger.cpp
srcs/rain/misc/: CMakeLists.txt  rain_macros.h  string_logo.cpp  string_logo.h  string_utils.cpp  string_utils.h
targets/: core.cmake  rain.cmake  test-scripts.cmake  tests.cmake
tests/test_package/: CMakeLists.txt  test.cmd  test.cpp
thirdparties/: README.md
